# fastapi_bulletin_board

./: .env.example  README.md  config.py  constants.py  main.py  pyproject.toml  storage.py
api/: advertisements_api.py
public/css/: custom.css  styles.css
schemas/: advertisement.py  schemas.py
services/: currency_exchange.py
templates/: base.html  error404.html  index.html  show.html  show_create_form.html
templates/components/: forms.html
web/: advertisements_web.py
