[tool.poetry]
name = "fastapi-bulletin-board"
version = "0.1.0"
description = ""
authors = ["iryna.ivanova-at-669981400155 <avonavis@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_bulletin_board"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
